--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 
-  /* body { @apply m-0 flex min-w-[320px] min-h-screen place-items-center
-  } */
-
+  body { @apply bg-app-color-50 
+  }
 /* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
