--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+html{
+  scroll-behavior: smooth;
+}
   body { @apply bg-app-color-50 
   }
   .video-responsive {
@@ -18,6 +20,12 @@
     height: 100%;
     width: 100%;
     position: absolute;
+  }
+  .subheader{
+    @apply text-lg my-4 text-app-color-800 dark:text-app-color-200 rounded-full dark:bg-app-color-200 dark:bg-opacity-2 bg-app-color-700 bg-opacity-2 text-center py-1 hover:-translate-y-1 transition duration-300
+  }
+  .terms{
+    @apply hover:-translate-y-1 transition duration-300 py-2 px-3 dark:bg-app-color-200 dark:bg-opacity-2 bg-app-color-700 bg-opacity-2 text-app-color-700 dark:text-app-color-200 rounded-lg
   }
 /* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
