--- a/src/index.css
+++ b/src/index.css
@@ -27,74 +27,179 @@ html{
   .terms{
     @apply hover:-translate-y-1 transition duration-300 py-2 px-3 dark:bg-app-color-200 dark:bg-opacity-2 bg-app-color-700 bg-opacity-2 text-app-color-700 dark:text-app-color-200 rounded-lg
   }
-/* :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400; */
 
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%; */
-/* } */
-/* 
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+  /* AppLogo */
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  :root{
+    --sq: 100px;
+    --borderWidth: 5px;
+     --fontSize: 50px;
+    --move: calc(var(--sq) + var(--borderWidth));
+    --dur: 5s;
   }
-  a:hover {
-    color: #747bff;
+  
+  .e{
+    -webkit-text-stroke: 2px red; 
   }
-  button {
-    background-color: #f9f9f9;
+
+  
+  .wrapper{
+    width: 100%;
+    height: 100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
   }
-} */
+  .logo_container{
+    display:flex;
+    flex-direction:column;
+    
+  }
+  .row{
+    display:flex;
+    
+  }
+  .square{
+     display: flex;
+    justify-content:center;
+    align-items:center;
+  /*   background: red; */
+    border: var(--borderWidth) #fff solid;
+    width: var(--sq);
+    height: var(--sq);
+    margin-bottom: calc(var(--borderWidth)*-1);
+    margin-right: calc(var(--borderWidth)*-1)
+    
+  }
+  .letter{
+    font-size: var(--fontSize);
+    font-weight: bold;
+  }
+  
+  .row:first-child .square:first-child, .row:last-child .square:last-child{
+  /*   border: none  */
+    visibility:hidden;
+  }
+  /* ================ */
+  
+  
+  
+  /* CA */
+  .row:first-child .square:nth-child(2){
+    background: #abaf4c;
+      animation: c_move var(--dur) .1s cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  .row:first-child .square:nth-child(3){
+    background: #af824c;
+      animation: a_move var(--dur) cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  
+  @keyframes c_move {
+    0%, 100% {transform: translate(0, 0)} 
+     20% {transform: translate(var(--move), 0)}           
+    30% {transform: translate(var(--move), var(--move))}           
+    40% {transform: translate(var(--move), calc(var(--move)*2))}           
+    50% {transform: translate(0, calc(var(--move)*2))} 
+    60% {transform: translate(calc(var(--move)*-1), calc(var(--move)*2))} 
+    70% {transform: translate(calc(var(--move)*-1), var(--move))} 
+    80% {transform: translate(calc(var(--move)*-1), 0)}
+  }
+  
+  @keyframes a_move {
+    0%, 100% {transform: translate(0, 0)} 
+    20% {transform: translate(0, var(--move))}           
+    30% {transform: translate(0, calc(var(--move)*2))}           
+    40% {transform: translate(calc(var(--move)*-1), calc(var(--move)*2))}           
+    50% {transform: translate(calc(var(--move)*-2), calc(var(--move)*2))} 
+    60% {transform: translate(calc(var(--move)*-2), var(--move))} 
+    70% {transform: translate(calc(var(--move)*-2), 0)} 
+    80% {transform: translate(calc(var(--move)*-1), 0)} 
+  }
+  
+  /* LD */
+  .row:nth-child(2) .square:nth-child(1){
+    background: #4cabaf;
+      animation: l_move var(--dur) cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  .row:nth-child(3) .square:nth-child(1){
+    background: #4caf50;
+      animation: d_move var(--dur) .1s cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  
+  @keyframes l_move {
+    0%, 100% {transform: translate(0, 0)} 
+    20% {transform: translate(0, calc(var(--move)*-1))}           
+    30% {transform: translate(var(--move), calc(var(--move)*-1))}           
+    40% {transform: translate(calc(var(--move)*2), calc(var(--move)*-1))}           
+    50% {transform: translate(calc(var(--move)*2), 0)} 
+    60% {transform: translate(calc(var(--move)*2), var(--move))} 
+    70% {transform: translate(var(--move), var(--move))} 
+    80% {transform: translate(0, var(--move))} 
+  }
+  
+  @keyframes d_move {
+    0%, 100% {transform: translate(0, 0)} 
+    20% {transform: translate(0, calc(var(--move)*-1))}           
+    30% {transform: translate(0, calc(var(--move)*-2))}           
+    40% {transform: translate(var(--move), calc(var(--move)*-2))}           
+    50% {transform: translate(calc(var(--move)*2), calc(var(--move)*-2))} 
+    60% {transform: translate(calc(var(--move)*2), calc(var(--move)*-1))} 
+    70% {transform: translate(calc(var(--move)*2), 0)} 
+    80% {transform: translate(var(--move), 0)} 
+  }
+  /* 
+  @keyframes l_move {
+    0%, 100% {transform: translate(0, 0)} 
+    25% {transform: translate(0, -155px)} 
+    50% {transform: translate(155px, -155px)} 
+    75% {transform: translate(0, -155px)} 
+  }
+  
+  @keyframes d_move {
+    0%, 100% {transform: translate(0, 0)} 
+    25% {transform: translate(0, -155)} 
+    50% {transform: translate(0, -155px)} 
+    75% {transform: translate(0, -155px)} 
+  }
+   */
+  /*  */
+  /* NAA */
+  .row:nth-child(2) .square:nth-child(3){
+    background: #504caf;
+      animation: n_move var(--dur) cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  .row:last-child .square:nth-child(2){
+    background: #af504c;
+      animation: aa_move var(--dur) .1s cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  
+  @keyframes n_move {
+    0%, 100% {transform: translate(0, 0)} 
+    20% {transform: translate(0, var(--move))}           
+    30% {transform: translate(calc(var(--move)*-1), var(--move))}           
+    40% {transform: translate(calc(var(--move)*-2), var(--move))}           
+    50% {transform: translate(calc(var(--move)*-2), 0)} 
+    60% {transform: translate(calc(var(--move)*-2), calc(var(--move)*-1))} 
+    70% {transform: translate(calc(var(--move)*-1), calc(var(--move)*-1))} 
+    80% {transform: translate(0, calc(var(--move)*-1))} 
+  }
+  
+  @keyframes aa_move {
+    0%, 100% {transform: translate(0, 0)} 
+    20% {transform: translate(calc(var(--move)*-1), 0)}           
+    30% {transform: translate(calc(var(--move)*-1), calc(var(--move)*-1))}       
+    40% {transform: translate(calc(var(--move)*-1), calc(var(--move)*-2))}           
+    50% {transform: translate(0, calc(var(--move)*-2))} 
+    60% {transform: translate(var(--move), calc(var(--move)*-2))} 
+    70% {transform: translate(var(--move), calc(var(--move)*-1))} 
+    80% {transform: translate(var(--move), 0)} 
+  }
+  
